Consolidate and secure transfers